* increased contrast for badges/alert elements * fixed width of .fp to be @borderWidth ~ learn more-link changed to link-btn (login page)

--- a/src/theme/forms.less
+++ b/src/theme/forms.less
@@ -68,7 +68,7 @@ form.validate-on-submit.submitted.ng-invalid [type="submit"] {
       top: 0.45rem;
       left: 0;
       right: 0;
-      height: 1px;
+      height: @borderWidth;
       z-index: -1;
       background-color: @white;
     }
